--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
   },
   "dependencies": {
     "body-parser": "^1.9.0",
+    "bootstrap": "^3.3.7",
     "chalk": "^1.1.3",
     "compression": "^1.5.2",
     "dotenv": "^4.0.0",
     "express": "~4.9.0",
     "express-session": "^1.11.3",
+    "node-sass": "^4.5.3",
+    "node-sass-middleware": "^0.11.0",
     "pg": "^6.1.2",
     "pg-hstore": "^2.3.2",
     "pug": "^2.0.0-rc.1",
